improve mobile home experience & fix modal shift on desktop

--- a/frontend/src/pages/playerPage.css
+++ b/frontend/src/pages/playerPage.css
@@ -66,7 +66,7 @@ body {
 }
 
 .searchbar {
-  width: 200px;
+  width: 230px;
   padding: 15px 30px 15px 15px;
   margin: 0;
   border-radius: 15px;
@@ -308,8 +308,8 @@ button {
   border: 1px solid var(--color-surface-layer-2);
   box-shadow: 0 4px 30px var(--color-shadow);
   padding: 25px;
-  height: 120px;
-  width: 120px;
+  height: 150px;
+  width: 150px;
   border-radius: 15px;
 }
 
@@ -819,7 +819,7 @@ button {
 }
 
 .cape-gallery-element {
-  width: 6rem;
+  width: 8rem;
   display: grid;
   grid-template-rows: 8rem 1fr;
   justify-content: center;
@@ -1022,7 +1022,7 @@ button {
   padding: 8px 0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   width: var(--radix-anchor-width);
-  min-width: 200px;
+  min-width: 230px;
 }
 
 .search-history-item {
@@ -1033,7 +1033,7 @@ button {
   gap: 10px;
   cursor: pointer;
   color: #e0e0e0;
-  width: 200px;
+  width: 100%;
 }
 
 .search-history-item:hover,
